use Long.valueOf(long) instead
git-svn-id: https://svn.apache.org/repos/asf/directory/apacheds/trunk@952241 13f79535-47bb-0310-9956-ffa450edef68